--- a/appb/templates/appb/messaging_interface.html
+++ b/appb/templates/appb/messaging_interface.html
@@ -38,7 +38,7 @@
 
         <!-- Messaging Section -->
         <section id="message-section" style="display: none;">
-            <h3>Send a Message</h3>
+            <h3>Receive a Message</h3>
             <div class="input-group">
                 <input type="text" id="recipient" placeholder="Recipient Username">
             </div>
@@ -46,17 +46,18 @@
                 <textarea id="message-content" placeholder="Your Message"></textarea>
             </div>
             <button onclick="sendMessage()">Send Message</button>
-            <p id="message-error" class="error"></p>
+            <!-- <p id="message-error" class="error"></p> -->
+            <button id="logout-btn" class="logout-btn" style="display: none;" onclick="logout()">Logout</button>
         </section>
 
         <!-- Inbox Section -->
         <section id="inbox-section" style="display: none;">
-            <h3>Your Inbox</h3>
-            <div id="inbox"></div>
+            <!-- <h3>Your Inbox</h3>
+            <div id="inbox"></div> -->
         </section>
 
         <!-- Logout Button -->
-        <button id="logout-btn" class="logout-btn" style="display: none;" onclick="logout()">Logout</button>
+       
     </div>
 
     <script src="/static/js/appb.js"></script> <!-- External JS file -->
